# real-feel

./: .gitignore  Dockerfile  README.md  pyproject.toml  testSentiment.py
notebooks/: modelPrototyping.ipynb
src/real_feel/: __init__.py  api.py  botPredict.py  dataProcessing.py  db_api.py  ensemble_bot_detector.py  models.py  pipeline.py  plotting.py  sentimentPredict.py  test_ensemble_integration.py  test_pipeline.py  twitter_client.py
src/real_feel/textModel/notebooks/: experiment1.ipynb  experiment1_mess.ipynb  experiment2_subword_tokenization.ipynb  experiment3.ipynb  experiment3_corrected.ipynb  experiment4.ipynb  experiment5.ipynb  modelArchitectureDraft.ipynb
src/real_feel/textModel/real_feel_model/: Dockerfile.training  README_TRAINING.md  __init__.py  config.py  deploy_ec2.sh  docker-compose.training.yml  launch_training.sh  launch_training_s3.sh  loss.py  model.py  optimizer.py  test_ensemble.py  train_ensemble.py  trainer.py
