[project]
name = "real-feel"
version = "0.1.0"
description = ""
authors = [
    {name = "danolongo",email = "danielmarg04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "transformers (>=4.55.0,<5.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "real_feel", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
