[project]
name = "real-feel"
version = "0.1.0"
description = ""
authors = [
    {name = "danolongo",email = "danielmarg04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "transformers (>=4.55.0,<5.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tweepy (>=4.16.0,<5.0.0)",
    "botometer (>=2.0.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "real_feel", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
